# ModelLink

./: .gitignore  OWNERS  README.md  README_en.md  SECURITYNOTE.md  bugfix.py  convert_ckpt.py  env_npu.sh  evaluation.py  inference.py  preprocess_data.py  pretrain_baichuan.py  pretrain_bloom.py  pretrain_gpt.py  pretrain_gpt_link.py  pretrain_intern.py  pretrain_llama.py  pretrain_llama2.py  public_address_statement.md  requirements.txt  setup.py
ascendspeed/: __init__.py  arguments.py  checkpointing.py  enums.py  error_utils.py  global_vars.py  initialize.py  learning_rates.py  megatron_adaptor.py  testing_utils.py  text_generation_utils.py  training.py  utils.py
ci/: access_control_test.py  build.sh
data/: data_handler.py  tokenizer.py  utils.py
examples/: README.md  pretrain_llama_1p.sh  pretrain_llama_8p
mindie_ref/mindie_llm/atb_models/core/: CMakeLists.txt
mindie_ref/mindie_llm/atb_models/core/base/: context_factory.cpp  model.cpp
mindie_ref/mindie_llm/atb_models/core/include/atb_speed/: log.h
mindie_ref/mindie_llm/atb_models/core/include/atb_speed/base/: hosttensor_binder.h  model.h
mindie_ref/mindie_llm/atb_models/core/include/atb_speed/utils/: hosttensor_binder_factory.h  model_factory.h  operation_factory.h  operation_util.h  speed_probe.h  statistic.h
mindie_ref/mindie_llm/atb_models/core/log/: log_sink.cpp  log_sink_file.cpp  log_sink_stdout.cpp  log_stream.cpp
mindie_ref/mindie_llm/atb_models/core/utils/: filesystem.cpp  hosttensor_binder_factory.cpp  model_factory.cpp  operation_factory.cpp  speed_probe.cpp  statistic.cpp  str_split.cpp
(+2032 files in other folders)
